--- a/assets/base.css
+++ b/assets/base.css
@@ -872,12 +872,21 @@ summary::-webkit-details-marker {
 }
 
 .subtitle {
-  font-size: 1.8rem;
-  line-height: calc(1 + 0.8 / var(--font-body-scale));
+  font-size: 1.2rem;
+  line-height: 1.25;
   letter-spacing: 0.06rem;
-  color: rgba(var(--color-foreground), 0.7);
+  color: #767474;
 }
-
+@media screen and (min-width: 768px) {
+  .subtitle {
+    font-size: 1.4rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .subtitle {
+    font-size: 1.6rem;
+  }
+}
 .subtitle--small {
   font-size: 1.4rem;
   letter-spacing: 0.1rem;
@@ -898,7 +907,7 @@ summary::-webkit-details-marker {
   row-gap: var(--grid-mobile-vertical-spacing);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
   .grid {
     column-gap: var(--grid-desktop-horizontal-spacing);
     row-gap: var(--grid-desktop-vertical-spacing);
@@ -3363,8 +3372,9 @@ details-disclosure > details {
   width: calc(50% - var(--grid-mobile-horizontal-spacing) / 2);
 }
 @media screen and (min-width: 768px) and (max-width: 991.98px) {
-  .product-grid.grid--2-col-tablet-down .grid__item {
-    width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
+  .product-grid.grid--3-col-tablet .grid__item {
+    width: calc(33.33% - var(--grid-desktop-horizontal-spacing) * 2 / 3);
+    max-width: calc(33.33% - var(--grid-desktop-horizontal-spacing) * 2 / 3);
   }
 
 }
@@ -3395,3 +3405,30 @@ details-disclosure > details {
   }
 }
 
+/* Tagline */
+.bloopers-title-wrapper {
+  margin-bottom: 1.8rem;
+  text-align: center;    
+}
+.bloopers-title-wrapper .title:not(:only-child) {
+  margin-bottom: 1rem;
+}
+.bloopers-title-wrapper .title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1;
+  color: #000000;
+}
+@media screen and (min-width: 768px) {
+  .bloopers-title-wrapper {
+    margin-bottom: 2.4rem;   
+  }
+}
+@media screen and (min-width: 992px) {
+  .bloopers-title-wrapper {
+    margin-bottom: 3.2rem;   
+  }
+  .bloopers-title-wrapper .title {
+    font-size: 24px;
+  }
+}
