--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1495,3 +1495,82 @@ a.product__text {
     overflow-y: hidden;
   }
 }
+
+.product__info-wrapper .product__options-with-size-guide {
+  display: flex;
+  justify-content: space-between;
+}  
+
+.product__info-wrapper .size-guide__trigger {
+  background: none;
+  border: none;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  color: #0074FA;
+}
+.product__info-wrapper .size-guide__icon svg{
+  width: 12px;
+  height: 12px;
+}
+.product__info-wrapper .size-guide__modal {
+  box-sizing: border-box;
+  position: fixed;
+  z-index: 101;
+  margin: 0 auto;
+  top: 0;
+  left: 0;
+  overflow: auto;
+  width: 100%;
+  background: rgba(var(--color-foreground), 0.2);
+  height: 100%;
+}
+
+.product__info-wrapper .size-guide__modal[hidden] {
+  display: none;
+}
+
+.product__info-wrapper .size-guide__modal-inner {
+  border-radius: var(--popup-corner-radius);
+  background-color: rgb(var(--color-background));
+  overflow: auto;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 10rem;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 5rem;
+  width: 92%;
+  position: absolute;
+  top: 0;
+  padding: 1.5rem 3rem;
+  border-color: rgba(var(--color-foreground), var(--popup-border-opacity));
+  border-style: solid;
+  border-width: var(--popup-border-width);
+  box-shadow: var(--popup-shadow-horizontal-offset) var(--popup-shadow-vertical-offset) var(--popup-shadow-blur-radius)
+    rgba(var(--color-shadow), var(--popup-shadow-opacity));
+}
+
+.product__info-wrapper .size-guide__image-wrapper img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product__info-wrapper .size-guide__close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border: none;
+  background: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .product__info-wrapper .size-guide__modal-inner {
+    margin-top: 5rem;
+    width: 40%;
+    padding: 3rem;
+  }
+}
