--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -19,7 +19,7 @@
 <style>
   header-drawer {
     justify-self: start;
-    margin-left: -1.2rem;
+    width: 100%;
   }
 
   {%- if section.settings.sticky_header_type == 'reduce-logo-size' -%}
@@ -154,7 +154,6 @@
     endif
   -%}
   <header class="header header--{{ section.settings.logo_position }} header--mobile-{{ section.settings.mobile_logo_position }} page-width{% if section.settings.menu_type_desktop == 'drawer' %} drawer-menu{% endif %}{% if section.settings.menu != blank %} header--has-menu{% endif %}{% if has_app_block %} header--has-app{% endif %}{% if social_links %} header--has-social{% endif %}{% if shop.customer_accounts_enabled %} header--has-account{% endif %}{% if localization_forms %} header--has-localizations{% endif %}">
-    <div class="header-left">
       {%- liquid
         if section.settings.menu != blank
           render 'header-drawer'
@@ -164,7 +163,7 @@
           render 'header-search', input_id: 'Search-In-Modal-1'
         endif
       -%}
-
+    <div class="header-left">
       {%- if section.settings.logo_position != 'middle-center' -%}
         {%- if request.page_type == 'index' -%}
           <h1 class="header__heading">
